# Redline

./: .gitignore  .gitmodules  README.md  eslint.config.mjs  package.json  pnpm-workspace.yaml  tsconfig.json  validate.sh
.claude/: CLAUDE.md
.claude/commands/: bugfix.md  build.md  doc-review.md  enhance.md  new-thread.md
.github/workflows/: ci.yml
apps/: README.md
docs/: procurement-evaluation-plan.md
docs/adr/: 0001-adapter-over-wayfinder.adr.md  0002-own-minio-and-postgres.adr.md  0003-parquet-to-json-boundary.adr.md  0004-user-defined-requirements-not-fixed-1-6.adr.md  0005-numbatch-fork-all-but-frontend.adr.md  README.md
docs/guides/: local-dev-and-validation.md
docs/threads/: thread-01-scaffold-and-spike.md  thread-02-proc-domain-entities-and-ports.md  thread-02-redline-domain-entities-and-ports.md  thread-02a-generalise-requirements.md  thread-03-womblex-sidecar-service.md  thread-04-extraction-reader-adapter.md  thread-05-numbatch-integration.md  thread-06-numbatch-financial-schema-and-api.md  thread-07-numbatch-financial-extraction-worker.md  (+1 more)
infra/: docker-compose.yml
scripts/: podman-run.sh  thread-03-smoke.sh  vendor-wayfinder.sh
services/: README.md
services/numbatch/financial_extension/: README.md  pyproject.toml
services/numbatch/financial_extension/migrations/: redline_financial_0001_financial_tables.py
services/numbatch/financial_extension/src/numbatch_financial/: __init__.py  api.py  extraction_repository.py  extractor.py  models.py  repository.py  schemas.py  womblex_source.py  worker.py
services/numbatch/financial_extension/tests/: conftest.py  test_config_api.py  test_extraction_read_api.py  test_extraction_repository.py  test_extractor.py  test_migration.py  test_worker.py
services/womblex-ingest/: .gitignore  Dockerfile  README.md  pyproject.toml
services/womblex-ingest/src/womblex_ingest/: __init__.py  asgi.py  config.py  extraction.py  main.py  real_extractor.py  records.py  runs.py  storage.py
services/womblex-ingest/tests/: __init__.py  conftest.py  test_ingest_api.py  test_stub_extractor.py
(+2 files in other folders)
