[project]
name = "numbatch-financial"
version = "0.1.0"
description = "redline's additive financial extension to the forked Numbatch backend: financial_profiles + financial_extractions tables, an Alembic migration, and the config API. Consumed by the Thread 7 Arq worker stage and the Thread 8 IFinancialExtractor adapter."
requires-python = ">=3.11"
# Mirrors the forked Numbatch backend's own stack (FastAPI + SQLAlchemy async +
# Alembic + Pydantic v2). Pinned loosely so the overlay tracks the fork.
dependencies = [
    "fastapi>=0.111,<0.116",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "httpx>=0.27,<0.29",
    "aiosqlite>=0.19,<0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
